# DsrpTrabajoFinalML1

./: .gitignore  Makefile  README.md  pyproject.toml
models/: Regresion_Logistica.joblib
notebooks/: Demo.ipynb
packageDsrpML1/: __init__.py  config.py  dataset.py
packageDsrpML1/modeling/: predict.py  save.py  train.py
