[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "packageDsrpML1"
version = "0.0.1"
description = "Este es el trabajo final del modulo ML1 del programa de epecializado en Machine Learning Engineer"
authors = [
  { name = "Jose A. Cusihuallpa" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "loguru",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["packageDsrpML1"]
include = ["pyproject.toml", "packageDsrpML1/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["packageDsrpML1"]
force-sort-within-sections = true

